add thread different thrift server mode